force-app/main/default/objects/Third_Party_Recipient__c/Third_Party_Recipient__c.object-meta.xml
<CustomObject>
    <description>GDPR Article 13/14 - Third-party data recipients. Tracks organizations that receive personal data, their location, safeguards, and data processing agreements.</description>
    <label>Third Party Recipient</label>
    <nameField>
        <displayFormat>TPR-{0000000}</displayFormat>
        <label>Recipient Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>