force-app/main/default/objects/Third_Party_Recipient__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country where the third-party recipient is located</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>