force-app/main/default/objects/Third_Party_Recipient__c/fields/Data_Categories_Shared__c.field-meta.xml
<CustomField>
    <fullName>Data_Categories_Shared__c</fullName>
    <description>Categories of personal data shared with this recipient</description>
    <label>Data Categories Shared</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>