force-app/main/default/objects/Third_Party_Recipient__c/fields/DPA_Signed__c.field-meta.xml
<CustomField>
    <fullName>DPA_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a Data Processing Agreement has been signed with this recipient</description>
    <label>DPA Signed</label>
    <type>Checkbox</type>
</CustomField>