force-app/main/default/objects/Third_Party_Recipient__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <description>Name of the third-party organization receiving personal data</description>
    <label>Recipient Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>