force-app/main/default/objects/Third_Party_Recipient__c/fields/Safeguards__c.field-meta.xml
<CustomField>
    <fullName>Safeguards__c</fullName>
    <description>Data protection safeguards in place (e.g., Standard Contractual Clauses, Binding Corporate Rules, adequacy decision)</description>
    <label>Safeguards</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>